codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_active_user_defined_profile.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                          │
│                                                                    │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date      │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:         gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                          │
│  Permissions:   Profile locked (read-only, Ask for approval)       │
│  Agents.md:     <none>                                             │
│                                                                    │
│  Token usage:   0 total  (0 input + 0 output)                      │
│  Context:       100% left                                          │
│  Limits:        data not available yet                             │
╰────────────────────────────────────────────────────────────────────╯
